# sudoku_solver

./: .gitignore  Cargo.toml  README.md
benches/: sudoku_benchmark.rs
src/: cell.rs  combinations.rs  coordinate.rs  exam.rs  lib.rs  main.rs  model.rs  num_check.rs  punch.rs  rng_util.rs  solver.rs  table.rs  util.rs  zone.rs  zone_set.rs
src/exam/: exam16.rs  exam9.rs  exam_jigsaw.rs
src/model/: array_note.rs  array_vector.rs  cell.rs  cell_with_read.rs  coordinate.rs  index_key_map.rs  max_num.rs  non_atomic_bool.rs  note.rs  ref_zone.rs  relaxed_bool.rs  table.rs  table_lock.rs  unsafe_cell_sync.rs  zone.rs  zone_cache.rs  zone_key_map.rs  zone_set.rs
src/punch/: naked_single.rs
src/solver/: box_line_reduction.rs  guess.rs  hidden.rs  naked.rs  single.rs  solve_skip.rs  solver_final.rs  solver_history.rs  solver_result.rs  solver_simple.rs  solver_skip_result.rs  validater.rs
src/table/: naked.rs
