[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku_solver_lib"
path = "src/lib.rs"

[[bin]]
name = "sudoku_solver"
path = "src/main.rs"

[dependencies]
rand = { version = "*", features = ["std_rng", "small_rng"] }
enum-iterator = "*"
rayon = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "sudoku_benchmark"
harness = false

[profile.release]
opt-level = 3
strip = true
lto = true 
codegen-units = 1
#debug = true